--- a/html/html5/media2_tag.html
+++ b/html/html5/media2_tag.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <video src="">
-        <source src="trailer.mp4">
+        <source src="trailer.mp4" aao>
 
     </video>
 </body>
