--- a/html/html5/inline_tag.html
+++ b/html/html5/inline_tag.html
@@ -14,6 +14,12 @@
     </style>
 </head>
 <body>
+    <form action="https://www.naver.com">
+        <input type="text">
+
+    </form>
+
+
     <span>inline-1</span>
     <div>inline-2</div>
     <span>inline-3</span>
