--- a/html/Facebook/facebook.html
+++ b/html/Facebook/facebook.html
@@ -10,29 +10,48 @@
 </head>
 
 <body>
-
-    <section>
-        <div id="div_L" class="mar_30">
-            <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="facebook">
-            <p>Facebook에서 전세계에 있는 친구, 가족, 지인들과 함께 이야기를 나눠보세요.</p>
-        </div>
-        <div id="div_R" class="mar_30">
-            <div>
-                <form action="#">
-                    <ul>
-                        <li><input type="text" name="user_id" id="user_id" value="이메일 또는 전화번호"></li>
-                        <li><input type="password" name="user_pw" id="user_pw" value="비밀번호"></li>
-                        <li><input type="submit" name="" id="" value="로그인"></li>
-                        <li><p>비밀번호를 잊으셨나요?</p></li>
-                    </ul>
-                    <hr>
-                    <button>새 계정 만들기</button>
-                </form>
+    <div id="background_color">
+        <section>
+            <div id="div_L" class="mar_30">
+                <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="facebook">
+                <p>Facebook에서 전세계에 있는 친구, 가족, 지인들과 함께 이야기를 나눠보세요.</p>
             </div>
-        </div>
-    </section>
-    <footer>
+            <div id="div_R" class="mar_30">
+                <div id="div_form">
+                    <form action="#">
+                        <ul>
+                            <li><input type="text" name="user_id" id="user_id" value="이메일 또는 전화번호"></li>
+                            <li><input type="password" name="user_pw" id="user_pw" value="비밀번호"></li>
+                            <li><input type="submit" name="" id="" value="로그인"></li>
+                            <li>
+                                <p>비밀번호를 잊으셨나요?</p>
+                            </li>
+                        </ul>
+                        <hr>
+                        <button>새 계정 만들기</button>
+                    </form>
 
+                </div>
+                <div id="comment">
+                    <p>유명인, 브랜드 또는 비즈니스를 위한 <b>페이지 만들기</b></p>
+                </div>
+            </div>
+        </section>
+    </div>
+    <footer>
+        <ul>
+            <li>한국어</li>
+            <li>English (US)</li>
+            <li>Tiếng Việt</li>
+            <li>Bahasa Indonesia</li>
+            <li>ภาษาไทย</li>
+            <li>Español</li>
+            <li>中文(简体)</li>
+            <li>日本語</li>
+            <li>Português (Brasil)</li>
+            <li>Français (France)</li>
+            <li>Deutsch</li>
+        </ul>
 
     </footer>
 </body>
