--- a/html/Memb_Manager/index.html
+++ b/html/Memb_Manager/index.html
@@ -58,7 +58,7 @@
                         <div class="msg"></div>
                     </td>
                     <td>
-                        <input type="submit" value="등록" id="addBtn">
+                        <input type="button" value="등록" id="addBtn">
                         <input type="reset">
                     </td>
                 </tr>
