--- a/html/Facebook/facebook.html
+++ b/html/Facebook/facebook.html
@@ -19,7 +19,7 @@
             <div id="div_R" class="mar_30">
                 <div id="div_form">
                     <form action="#">
-                        <ul>
+                        <ul id="f_ul">
                             <li><input type="text" name="user_id" id="user_id" value="이메일 또는 전화번호"></li>
                             <li><input type="password" name="user_pw" id="user_pw" value="비밀번호"></li>
                             <li><input type="submit" name="" id="" value="로그인"></li>
@@ -39,7 +39,7 @@
         </section>
     </div>
     <footer>
-        <ul>
+        <ul id="footer_ul">
             <li>한국어</li>
             <li>English (US)</li>
             <li>Tiếng Việt</li>
@@ -51,6 +51,23 @@
             <li>Português (Brasil)</li>
             <li>Français (France)</li>
             <li>Deutsch</li>
+        </ul>
+        <hr style="width: 800px; margin: 0 auto;">
+       
+        <ul id="footer_ul">
+            <li> 가입하기</li>
+            <li>로그인</li>
+            <li> Messenger</li>
+            <li>Facebook Lite</li>
+            <li>Watch</li>
+            <li>장소</li>
+            <li>게임</li>
+            <li>日本語</li>
+            <li>Marketplace</li>
+            <li>Oculus</li>
+            <li>Portal</li>
+            <li>Instagram</li>
+            <li>Bulletin</li>
         </ul>
 
     </footer>
