--- a/JSP/intellij/FirstApp/FirstApp/src/main/webapp/login.html
+++ b/JSP/intellij/FirstApp/FirstApp/src/main/webapp/login.html
@@ -7,7 +7,7 @@
 <body>
 <h1>로그인</h1>
 <hr>
-<form action="login.jsp" method="post">
+<form action="login.jsp" method="get">
 ID <input type="text" name="userid" id="userid" >
   <br>
   PW <input type="password" name="pw" id="pw">
