--- a/html/jpuery/jquery_event2.html
+++ b/html/jpuery/jquery_event2.html
@@ -23,7 +23,7 @@
     </style>
     <script>
       $(document).ready(function () {
-        /*  $("div").click(function () {
+         $("div").click(function () {
           console.log("div click!");
         });
         $("p").click(function () {
@@ -42,7 +42,7 @@
           console.log("a click!");
 
           return false;
-        }); */
+        });
         $("#allCheck").change(function () {
           console.log("checked 상태", this.checked);
           if (this.checked) {
